# logging_singleton

./: CHANGELOG.md  README.md  pyproject.toml  setup.py
src/logging_service/: __init__.py  logging_service.py
src/logging_service/test/: test_logging_singleton.py
