[build-system]

#requires = ["setuptools >= 64", "cython", "wheel"]
requires = ["setuptools >= 60.10.0", "cython", "wheel"]

[project]

name = "logging-singleton"
description = "Logger shared by all modules in a program. Simplification of standard Python logging"
version = "1.0.3"
readme  = "README.md"
authors = [
  {name = "Andreas Paepcke", email = "paepcke@cs.stanford.edu"}
  ]
maintainers = [
  {name = "Andreas Paepcke", email = "paepcke@cs.stanford.edu"}
  ]
license = {text = "MIT License"}
requires-python = ">= 3.5"

dependencies = []

[project.optional-dependencies]
test = [
  "pytest>=9.0.2",
]

[project.urls]

Homepage = "https://github.com/paepcke/logging_singleton"
Documentation = "https://github.com/paepcke/logging_singleton"
Repository = "https://github.com/paepcke/logging_singleton"

